--- a/.travis.yml
+++ b/.travis.yml
@@ -61,7 +61,7 @@ before_install:
 # command to install dependencies
 install:
     - ls
-    - cd ${HOME}/lib/BamQC
+    - cd ${HOME}/build/rehamFatima/Bam_QC
     - pip install .
     - pip install -r requirements.txt
     - if [[ "$TESTENV" == "docs" ]]; then pip install sphinx;fi
