--- a/.travis.yml
+++ b/.travis.yml
@@ -46,6 +46,7 @@ addons:
             - libtool
             - pigz
             - tree
+            - ant
 
 before_install:
     - pwd
@@ -66,9 +67,9 @@ install:
     - pip install -r requirements.txt
     - if [[ "$TESTENV" == "docs" ]]; then pip install sphinx;fi
     - if [[ "$TESTENV" == "pylint" ]]; then pip install pylint;fi
-    - cd lib
-    - wget http://www.mirrorservice.org/sites/ftp.apache.org//ant/binaries/apache-ant-1.10.5-bin.zip
-    - unzip apache-ant-1.10.5-bin.zip
+#    - cd lib
+#    - wget http://www.mirrorservice.org/sites/ftp.apache.org//ant/binaries/apache-ant-1.10.5-bin.zip
+#    - unzip apache-ant-1.10.5-bin.zip
 
 before_script:
 
